# ds_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
data/features/: .gitignore
data/inference/: .gitignore
data/predictions/: .gitignore
data/raw_data/: .gitignore  customers.csv.dvc  inference.csv.dvc  y_data.csv.dvc
ds_template/: __init__.py  config.py  trainable.py
ds_template/dvc_steps/: do_inference.py  feature.py  featurize.py  load_clean.py  train_model.py
ds_template/features/: feature.py  mock_feature.py
ds_template/models/: constant_model.py
dvc/: dvc.yaml  params.yaml
hooks/: post_gen_project.py  pre_gen_project.py
project_name/: config.py
src/: __init__.py
{{cookiecutter.project_name}}/: config.py
