[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "Template for DS projects"
authors = ["Ignat Levagin <ignatlevagin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ds-template" },
]

[tool.poetry.dependencies]
python = ">=3.13"
numpy = "2.2.*"
pandas = "2.2.*"
scikit-learn = "1.6.*"
matplotlib = "3.10.*"
dvc = "3.59.*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
